--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "swr": "^1.3.0",
+    "tabler-icons-react": "^1.47.0",
     "wagmi": "^0.3.2"
   },
   "devDependencies": {
