--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mantine/hooks": "^4.2.2",
     "@mantine/next": "^4.2.2",
     "ethers": "^5.6.4",
+    "fast-json-stable-stringify": "^2.1.0",
     "next": "12.1.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
