--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mantine/form": "^4.2.2",
     "@mantine/hooks": "^4.2.2",
     "@mantine/next": "^4.2.2",
+    "axios": "^0.27.2",
     "ethers": "^5.6.4",
     "fast-json-stable-stringify": "^2.1.0",
     "next": "12.1.5",
